platform/kyverno/disallow-root.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: check-root-user
  annotations:
    policies.kyverno.io/title: Disallow Root User
spec:
  validationFailureAction: Enforce # This will actually block the deployment if it's root!
  background: true
  rules:
    - name: check-run-as-non-root
      match:
        any:
        - resources:
            kinds:
              - Pod
      validate:
        message: "Running as root is not allowed. Please set runAsNonRoot to true."
        pattern:
          spec:
            securityContext:
              runAsNonRoot: true
